# AktienSpiel

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  pyproject.toml
backend/: .env.example  .env.production  Dockerfile  pyproject.toml  requirements.txt
backend/.choreo/: component.yaml  endpoints.yaml
backend/Data/: companies.json  histories.json
backend/api/: serializers.py  urls.py  views.py
backend/api/tests/: test_views.py
backend/backend/: middleware.py  settings.py  urls.py
backend/stocks/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py  transactions.py  urls.py  views.py
backend/stocks/migrations/: 0001_initial.py  0002_rename_time_history_name.py  0002_team_portfolio_history.py  0003_alter_stock_name.py  0003_alter_team_portfolio_history.py  0004_alter_registrationrequest_user_and_more.py  0004_stockholding_team_stockholding_team.py  0005_remove_userprofile_first_name_and_more.py  0005_transaction.py  0006_alter_stockholding_stock_alter_team_name.py  0006_transaction_errors.py  0007_remove_team_members_userprofile.py  0007_userprofile_last_edited.py  0008_alter_userprofile_last_edited.py  0008_alter_userprofile_user.py  0009_alter_userprofile_last_edited.py  0009_alter_userprofile_team.py  0010_team_team_admin.py  0010_transaction_status.py  0011_team_last_edited.py  0011_transaction_description.py  0012_alter_stockholding_stock_alter_stockholding_team.py  0012_alter_team_team_admin.py  0013_alter_history_name_alter_stock_current_price_and_more.py  0014_alter_transaction_transaction_type.py  0015_threadcontrol.py  (+11 more)
(+103 files in other folders)
