[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A statistics app"
authors = ["Max Mustermann <max.megamustermann@gmail.com>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.1"
django-cors-headers = "^4.4.0"
djangorestframework = "^3.15.2"
pyjwt = "^2.9.0"
pytz = "^2024.2"
sqlparse = "^0.5.1"
python-dotenv = "^1.0.1"
asgiref = "^3.8.1"
djangorestframework-simplejwt = "^5.3.1"
yfinance = "^0.2.44"
psycopg = {extras = ["binary"], version = "^3.2.3"}
whitenoise = "^6.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
yapf = "^0.40.2"
django-stubs = "^5.1.0"
types-pytz = "^2024.2.0.20241003"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
